@@ -20,6 +20,7 @@
 - change lookup to use reinit instead of reopen.
 - update map_hash_table_size description.
 - add configuration option to use fqdn in mounts.
+- fix out of order call in program map lookup.
 
 21/04/2015 autofs-5.1.1
 =======================
